      not dns_use_dnssec.

JH/03 Bugzilla 1157: support log_selector smtp_confirmation for lmtp.

TL/04 Add verify = header_names_ascii check to reject email with non-ASCII
      characters in header names, implemented as a verify condition.
      Contributed by Michael Fischer v. Mollard.

TL/05 Rename SPF condition results err_perm and err_temp to standardized
      results permerror and temperror. Is a backward incompatibility if
      the ACL tests for either of these two results. Patch contributed by
      user bes-internal on the mailing list.

JH/04 Add ${utf8clean:} operator. Contributed by Alex Rau.

JH/05 Bugzilla 305: Log incoming-TLS details on rejects, subject to log
      selectors, in both main and reject logs.

JH/06 Log outbound-TLS and port details, subject to log selectors, for a
      failed delivery.

JH/07 Add malware type "sock" for talking to simple daemon.

JH/08 Bugzilla 1371: Add tls_{,try_}verify_hosts to smtp transport.

JH/09 Bugzilla 1431: Support (with limitations) headers_add/headers_remove in
      routers/transports under cutthrough routing.

JH/10 Bugzilla 1005: ACL "condition =" should accept values which are negative
      numbers.  Touch up "bool" conditional to keep the same definition.

TL/06 Remove duplicated language in spec file from 4.82 TL/16.

JH/11 Add dnsdb tlsa lookup.  From Todd Lyons.

JH/12 Expand items in router/transport headers_add or headers_remove lists
      individually rather than the list as a whole.  Bug 1452.

      Required for reasonable handling of multiple headers_ options when
      they may be empty; requires that headers_remove items with embedded
      colons must have them doubled (or the list-separator changed).

TL/07 Add new dmarc expansion variable $dmarc_domain_policy to directly
      view the policy declared in the DMARC record. Currently, $dmarc_status
      is a combined value of both the record presence and the result of the
      analysis.

Exim version 4.82
-----------------
