@@ -42,8 +42,10 @@ TL/04 Add verify = header_names_ascii check to reject email with non-ASCII
       Contributed by Michael Fischer v. Mollard.
 
 TL/05 Rename SPF condition results err_perm and err_temp to standardized
-      results permerror and temperror. Is a backward incompatibility if
-      the ACL tests for either of these two results. Patch contributed by
+      results permerror and temperror.  Previous values are deprecated but
+      still accepted.  In a future release, err_perm and err_temp will be
+      completely removed, which will be a backward incompatibility if the
+      ACL tests for either of these two old results. Patch contributed by
       user bes-internal on the mailing list.
 
 JH/04 Add ${utf8clean:} operator. Contributed by Alex Rau.
